[package]
edition = "2024"
name = "rndc"
version = "0.1.4"
authors = ["kweonminsung"]
description = "BIND9 RNDC protocol implementation for Rust"
repository = "https://github.com/kweonminsung/bind9_rndc_rust"
license = "MPL-2.0"
keywords = ["BIND9", "RNDC", "Rust"]

[dependencies]
hmac = "0.12.1"
base64 = "0.22.1"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
rand = "0.10.0"
byteorder = "1.5.0"
indexmap = "2.9.0"

[dev-dependencies]
hex = "0.4.3"
